Add recipes coconut-curry-tofu Edit index.html add link to recipe coconut-curry-tofu

--- a/recipes/coconut-curry-tofu.html
+++ b/recipes/coconut-curry-tofu.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/coconut-curry-tofu.html">Coconut Curry Tofu</a>
+    <h1>Coconut Curry Tofu</h1>
 </body>
 </html>
