--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes Blue Zones Tofu Edition</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/coconut-curry-tofu.html">Coconut Curry Tofu</a>
+    <a href="https://github.com/dmle14"><h1>Odin Recipes Blue Zones Tofu Edition</h1></a>
+    <ul>
+        <li><a href="recipes/tofu-coconut-curry.html">Tofu Coconut Curry</a></li>
+        <li><a href="recipes/tofu-pad-thai.html">Tofu Pad Thai</a></li>
+        <li><a href="recipes/tofu-whole-grains-cashews.html">Tofu Fried Whole Grains With Crunchy Cashews</a></li>
+    </ul>
 </body>
 </html>
