Add style.css and css additions

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes Blue Zones Tofu Edition</title>
 </head>
 <body>
-    <a href="https://github.com/dmle14"><h1>Odin Recipes Blue Zones Tofu Edition</h1></a>
+    <a href="https://github.com/dmle14"><h1 class="title">Odin Recipes Blue Zones Tofu Edition</h1></a>
     <ul>
         <li><a href="recipes/tofu-coconut-curry.html">Tofu Coconut Curry</a></li>
         <li><a href="recipes/tofu-pad-thai.html">Tofu Pad Thai</a></li>
