--- a/recipes/tofu-whole-grains-cashews.html
+++ b/recipes/tofu-whole-grains-cashews.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tofu Fried Whole Grains With Crunchy Cashews</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Tofu Fried Whole Grains With Crunchy Cashews</h1>
+    <h1 class="title">Tofu Fried Whole Grains With Crunchy Cashews</h1>
     <img src="images/tofu-whole-grains-cashews.webp" alt="Tofu Fried Whole Grains With Crunchy Cashews">
     <h2>Description</h2>
         <p>
