--- a/recipes/tofu-coconut-curry.html
+++ b/recipes/tofu-coconut-curry.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tofu Coconut Curry</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Tofu Coconut Curry</h1>
+    <h1 class="title">Tofu Coconut Curry</h1>
     <img src="images/coconut-curry-tofu.webp" alt="Tofu Coconut Curry">
     <h2>Description</h2>
-        <p>Perfect over rice, quinoa, or veggies, this simple coconut curry tofu is quick and easy to make, filling, and the ideal weekday meal.</p>
+        <p>
+            Perfect over rice, quinoa, or veggies, this simple coconut curry tofu is quick and easy to make, filling, and the ideal weekday meal.
+        </p>
 
     <h2>Ingredients</h2>
         <ul>
