--- a/recipes/tofu-pad-thai.html
+++ b/recipes/tofu-pad-thai.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tofu Pad Thai</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Tofu Pad Thai</h1>
+    <h1 class="title">Tofu Pad Thai</h1>
     <img src="images/tofu-pad-thai.webp" alt="coconut-curry-tofu">
     <h2>Description</h2>
         <p>
